
VERSION 0.7.2cvs
================

2005-07-13  Vincent Richard  <vincent@vincent-richard.net>

 * All files: added reference counting and smart pointers to simplify the
   use of VMime objects. Please see README.refcounting for more information.

2005-07-06  Vincent Richard  <vincent@vincent-richard.net>

 * *contentHandler.{hpp|cpp}: added extractRaw() method to allow extracting
   data without performing any decoding.

2005-06-22  Vincent Richard  <vincent@vincent-richard.net>

 * Started version 0.7.2.


VERSION 0.7.1
=============

2005-06-21  Vincent Richard  <vincent@vincent-richard.net>

 * Fixed compilation errors with g++ 4.0.

 * defaultParameter.cpp: fixed a bug in RFC-2231 implementation.

2005-06-13  Vincent Richard  <vincent@vincent-richard.net>

 * word.cpp: fixed a bug in parsing, when the first character of word data
   was encoded in QP (thanks to Wolf Jiang).

2005-06-03  Vincent Richard  <vincent@vincent-richard.net>

 * parameterizedHeaderField.{hpp|cpp}: fixed a memory leak in the
   destructor (thanks to Rafael Fernandez).

2005-05-27  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/*/*Message.{hpp|cpp}: added a 'peek' parameter to extract
   message contents without marking the message as seen.

2005-05-19  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/imap/IMAPFolder.cpp: fixed bug in subfolders enumeration.

 * examples/example6.cpp: enhanced 'example6' into an interactive program to
   show some of the features of the messaging module.

2005-05-15  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/serviceInfos.{hpp|cpp}: changed getAvailableProperties() to
   return 'serviceInfos::property' objects instead of strings. This permits
   setting service properties in a more generic manner.

2005-05-03  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/imap/IMAPFolder.cpp: fixed missing space in "STATUS" command +
   parsing error in 'status_info'.
